selene-lib/tests/full_run/std_mistakes/std_mistakes.noroblox.stderr
error[incorrect_standard_library_use]: standard library global `table` does not contain the field `unpack`
  ┌─ std_mistakes.lua:1:1
  │
1 │ table.unpack({ "lua 5.2" })
  │ ^^^^^^^^^^^^
  │
  = `table.unpack` was found in the lua52, lua53, and luau standard libraries
  = you can set the standard library by putting the following inside selene.toml:
    std = "lua52"
    std = "lua53"
    std = "luau"

error[undefined_variable]: `utf8` is not defined
  ┌─ std_mistakes.lua:2:1
  │
2 │ utf8.len("lua 5.3")
  │ ^^^^
  │
  = `utf8` was found in the lua53 and luau standard libraries
  = you can set the standard library by putting the following inside selene.toml:
    std = "lua53"
    std = "luau"

